# Secure-Document-Vault

./: .flake8  Encryption Module.py  README.md  Secure Symmetric Encryption Module.md  Secure Vault Documentation.md  encryption_module.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: python-app.yml
tests/: test_security.py
